<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView5"
            android:background="@drawable/fon"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4.4"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding">

            <TextView
                    android:text="@string/layout_4text"
                    android:id="@+id/textView11"
                    style="@style/TextViewHead"
                    android:textSize="@dimen/textsize"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentTop="true"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:paddingLeft="@dimen/paddingtext"
                android:paddingRight="@dimen/paddingtext">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox6"
                            android:checked="true"
                            android:clickable="false"
                            android:buttonTint="@color/btnButtonNormal"/>
                    <TextView
                            android:text="@string/layout_5text11"
                            android:id="@+id/textView12"
                            style="@style/TextViewBody2"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox7"
                            android:checked="true"
                            android:clickable="false"
                            android:buttonTint="@color/btnButtonNormal"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <TextView
                                android:text="@string/layout_5text12"
                                android:id="@+id/textView13"
                                style="@style/TextViewBody2"/>
                        <TextView
                                android:text="@string/layout_5text121"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView17"
                                android:textSize="@dimen/smalltextsize"
                                android:textColor="@color/text1color"
                                android:paddingLeft="30dp"/>
                        <TextView
                                android:text="@string/layout_5text122"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView18"
                                android:textSize="@dimen/smalltextsize"
                                android:textColor="@color/text1color"
                                android:paddingLeft="30dp"/>
                        <TextView
                                android:text="@string/layout_5text123"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView19"
                                android:textSize="@dimen/smalltextsize"
                                android:textColor="@color/text1color"
                                android:paddingLeft="30dp"/>
                        <TextView
                                android:text="@string/layout_5text124"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView20"
                                android:textSize="@dimen/smalltextsize"
                                android:textColor="@color/text1color"
                                android:paddingLeft="30dp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox8"
                            android:checked="true"
                            android:clickable="false"
                            android:buttonTint="@color/btnButtonNormal"/>
                    <TextView
                            android:text="@string/layout_5text13"
                            android:id="@+id/textView14"
                            style="@style/TextViewBody2"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox9"
                            android:checked="true"
                            android:clickable="false"
                            android:buttonTint="@color/btnButtonNormal"/>
                    <TextView
                            android:text="@string/layout_5text14"
                            android:id="@+id/textView15"
                            style="@style/TextViewBody2"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox10"
                            android:checked="true"
                            android:clickable="false"
                            android:buttonTint="@color/btnButtonNormal"/>
                    <TextView
                            android:text="@string/layout_5text15"
                            android:id="@+id/textView16"
                            style="@style/TextViewBody2"
                            app:autoSizeTextType="uniform"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox11"
                            android:checked="true"
                            android:clickable="false"
                            android:buttonTint="@color/btnButtonNormal"/>
                    <TextView
                            android:text="@string/layout_5text16"
                            android:id="@+id/textView21"
                            style="@style/TextViewBody2"
                            app:autoSizeTextType="uniform"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding">

            <Button
                    android:text="@string/layout_btndale"
                    android:id="@+id/btndale3"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentTop="true"
                    style="@style/bazebutton"
                    android:background="@drawable/ic_btn2"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
