<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView7"
            android:background="@drawable/fon"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="18"
                android:paddingLeft="@dimen/paddingtext"
                android:paddingRight="@dimen/paddingtext">

            <TextView
                    android:text="@string/layout_7text"
                    android:id="@+id/textView23"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    style="@style/TextViewHead"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:paddingLeft="@dimen/paddingtext"
                android:paddingRight="@dimen/paddingtext">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="textPersonName"
                    android:hint="@string/layout_7edithint"
                    android:textSize="@dimen/textsize"
                    android:ems="10"
                    android:id="@+id/editText6"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentTop="true"
                    android:background="@color/text1color"/>
            <TextView
                    android:text="@string/layout_7text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView24"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/editText6"
                    android:textColor="@color/text1color"
                    android:textSize="@dimen/smalltextsize"
                    android:gravity="center_horizontal"/>
            <Button
                    android:id="@+id/btntas2"
                    android:text="@string/layout_btntas"
                    style="@style/bazebutton"
                    android:layout_below="@+id/textView24"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/ic_btn"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
