<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView4"
            android:background="@drawable/fon"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4.4"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding">

            <TextView
                    android:text="@string/layout_4text"
                    android:id="@+id/textView5"
                    style="@style/TextViewHead"
                    android:textSize="@dimen/textsize"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentTop="true"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:paddingLeft="@dimen/paddingtext"
                android:paddingRight="@dimen/paddingtext">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox2"
                            android:checked="true"
                            android:clickable="false"
                            android:buttonTint="@color/btnButtonNormal"/>

                    <TextView
                            android:text="@string/layout_4text11"
                            android:id="@+id/textView7"
                            style="@style/TextViewBody2"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox3"
                            android:checked="true"
                            android:clickable="false"
                            android:buttonTint="@color/btnButtonNormal"/>
                    <TextView
                            android:text="@string/layout_4text12"
                            android:id="@+id/textView8"
                            style="@style/TextViewBody2"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox"
                            android:checked="true"
                            android:clickable="false"
                            android:buttonTint="@color/btnButtonNormal"/>
                    <TextView
                            android:text="@string/layout_4text13"
                            android:id="@+id/textView6"
                            style="@style/TextViewBody2"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox5"
                            android:checked="true"
                            android:clickable="false"
                            android:buttonTint="@color/btnButtonNormal"/>
                    <TextView
                            android:text="@string/layout_4text14"
                            android:id="@+id/textView10"
                            style="@style/TextViewBody2"
                            app:autoSizeTextType="uniform"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox4"
                            android:checked="true"
                            android:clickable="false"
                            android:buttonTint="@color/btnButtonNormal"/>
                    <TextView
                            android:text="@string/layout_4text15"
                            android:id="@+id/textView9"
                            style="@style/TextViewBody2"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding">

            <Button
                    android:text="@string/layout_btndale"
                    android:id="@+id/btndale2"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentTop="true"
                    style="@style/bazebutton"
                    android:background="@drawable/ic_btn2"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
