<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView3"
            android:background="@drawable/fon"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:paddingLeft="@dimen/paddingtext"
                android:paddingRight="@dimen/paddingtext">

            <TextView
                    android:text="@string/layout_3text11"
                    android:id="@+id/textView3"
                    style="@style/TextViewHead"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentTop="true"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding">

            <TextView
                    android:text="@string/layout_3text21"
                    android:id="@+id/textView4"
                    style="@style/TextViewBody"
                    android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding">

            <Button
                    android:text="@string/layout_btndale"
                    android:id="@+id/btndale1"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentTop="true"
                    style="@style/bazebutton"
                    android:background="@drawable/ic_btn2"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
